[package]
name = "city-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5"
actix = "0.7"
actix-web = "4"
futures = "0.3"
tokio-postgres = "0.7.6"
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version="1.18", features = ["full"] }
actix-web-prom = "0.6.0"
